--- a/events/templates/events/base.html
+++ b/events/templates/events/base.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" href="{% static 'css/tempus-dominus.min.css' %}">
     <script src="{% static 'js/tempus-dominus.min.js' %}"></script>
 
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
     {% bootstrap_css %}
     {% bootstrap_javascript %}
 </head>
