--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -5,18 +5,24 @@
 {% block content %}
     <h2 class="mb-3">Мероприятия</h2>
     <a href="{% url 'event-create' %}" class="btn btn-primary mb-3">Создать мероприятие</a>
+    {% load static %}
     <div class="row">
         {% for event in events %}
             <div class="col-md-4">
-                <div class="card mb-4">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ event.title }}</h5>
-                        <p class="card-text">{{ event.description }}</p>
-                        <p><strong>Место:</strong> {{ event.location }}</p>
-                        <p><strong>Дата:</strong> {{ event.start_time|date:"d.m.Y H:i" }}</p>
-                        <a href="{% url 'event-detail' event.pk %}" class="btn btn-dark">Подробнее</a>
+                <a href="{% url 'event-detail' event.id %}" class="event-card-link">
+                    <div class="card mb-3 event-card">
+                        {% if event.image %}
+                            <img src="{{ event.image.url }}" class="event-banner" alt="Изображение мероприятия">
+                        {% else %}
+                            <img src="{% static 'images/default.jpg' %}" class="event-banner" alt="Нет изображения">
+                        {% endif %}
+                        <div class="card-body">
+                            <h5 class="card-title">{{ event.title }}</h5>
+                            <p class="card-text truncate"><strong>Дата:</strong> {{ event.start_time|date:"d.m.Y H:i" }}</p>
+                            <p class="card-text truncate"><strong>Место:</strong> {{ event.location }}</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         {% endfor %}
     </div>
