--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -1,16 +1,20 @@
 {% extends 'events/base.html' %}
+{% load static %}
 
 {% block title %}Список мероприятий{% endblock %}
 
 {% block content %}
     <h2 class="mb-3">Мероприятия</h2>
-    <a href="{% url 'event-create' %}" class="btn btn-primary mb-3">Создать мероприятие</a>
-    {% load static %}
+
+    {% if user.is_authenticated and user.role in "admin organizer" %}
+        <a href="{% url 'event-create' %}" class="btn btn-primary mb-3">Создать мероприятие</a>
+    {% endif %}
+
     <div class="row">
         {% for event in events %}
             <div class="col-md-4">
                 <a href="{% url 'event-detail' event.id %}" class="event-card-link">
-                    <div class="card mb-3 event-card">
+                    <div class="card mb-3 event-card d-flex flex-column h-100">
                         {% if event.image %}
                             <img src="{{ event.image.url }}" class="event-banner" alt="Изображение мероприятия">
                         {% else %}
@@ -18,12 +22,14 @@
                         {% endif %}
                         <div class="card-body">
                             <h5 class="card-title">{{ event.title }}</h5>
-                            <p class="card-text truncate"><strong>Дата:</strong> {{ event.start_time|date:"d.m.Y H:i" }}</p>
-                            <p class="card-text truncate"><strong>Место:</strong> {{ event.location }}</p>
+                            <p class="card-text event-date"><strong>Дата:</strong> {{ event.start_time|date:"d.m.Y H:i" }}</p>
+                            <p class="card-text event-location"><strong>Место:</strong> {{ event.location }}</p>
                         </div>
                     </div>
                 </a>
             </div>
+        {% empty %}
+            <p>Нет предстоящих мероприятий.</p>
         {% endfor %}
     </div>
 {% endblock %}
